[package]
name = "desktop-assistant-tui"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "desktop-assistant-tui"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
zbus.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tui-textarea = "0.7"
