[package]
name = "desktop-assistant-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# API + handlers
desktop-assistant-api-model = { path = "../api-model" }
desktop-assistant-application = { path = "../application" }

# Async + WS
futures = "0.3"
tokio.workspace = true
axum = { version = "0.8", features = ["ws"] }

uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

# Optional TLS support
tokio-rustls = { workspace = true, optional = true }
hyper = { version = "1", optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2", "service"], optional = true }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:hyper", "dep:hyper-util"]

[dev-dependencies]
desktop-assistant-core = { path = "../core" }
tokio-tungstenite = "0.29"
futures-util = "0.3"
tokio.workspace = true
tower = "0.5"
